--- a/css/styles.css
+++ b/css/styles.css
@@ -55,10 +55,8 @@ header h1 {
     padding-bottom: 20px;
 }
 
-body{
-    margin: 0 auto;
-}
 form {
+    align-items:center;
     border-top: 2px solid darkslategrey;
     max-width: 600px;
     margin: 0 auto;
